examples/test/testpolicy3671.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3671
  namespace: namespace186
spec:
  podSelector:
    matchLabels:
      key49: value45
      key34: value29
      key14: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value45
          key6: value18
          key42: value2
      podSelector:
        matchLabels:
          key15: value2
          key19: value3
          key27: value3
